# Poo-23-24

./: README.md
TP/: Aparelho.cpp  Aparelho.h  Aquecedor.cpp  Aquecedor.h  Aspersor.cpp  Aspersor.h  CMakeLists.txt  Fumo.cpp  Fumo.h  Humidade.cpp  Humidade.h  Interface.cpp  Interface.h  Lampada.cpp  Lampada.h  Luz.cpp  Luz.h  Processador.cpp  Processador.h  Propriedade.cpp  Propriedade.h  Radiacao.cpp  Radiacao.h  Refrigerador.cpp  Refrigerador.h  Regras.cpp  Regras.h  Relatório Meta 1 POO.docx  Sensor.cpp  Sensor.h  Som.cpp  Som.h  Temperatura.cpp  Temperatura.h  Vibracao.cpp  Vibracao.h  habitacao.cpp  habitacao.h  leitura.txt  main.cpp  (+2 more)
TP/Aparelhos/: Aquecedor.cpp  Aquecedor.h  Aspersor.cpp  Aspersor.h  Lampada.cpp  Lampada.h  Refrigerador.cpp  Refrigerador.h
TP/Propriedades/: Fumo.cpp  Fumo.h  Humidade.cpp  Humidade.h  Luz.cpp  Luz.h  Radiacao.cpp  Radiacao.h  Som.cpp  Som.h  Temperatura.cpp  Temperatura.h  Vibracao.cpp  Vibracao.h
